Fixed wrong shuffle, split game to its own file.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
     <button type="button" id="shuffleButton">Shuffle</button>
     <button type="button" id="resetButton">Reset</button>
+    <script type="text/javascript" src="SlidingGame.js"></script>
     <script type="text/javascript" src="index.js"></script>
 </body>
 
