--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div id="gameArea">
+    <div id="gameArea" tabindex="1">
     </div>
     <button type="button" id="shuffleButton">Shuffle</button>
     <button type="button" id="resetButton">Reset</button>
